<resources>
    <string name="app_name">Better Tinder</string>
    <string name="menu_history">History</string>
    <string name="menu_likes">Likes</string>
    <string name="menu_swipe">Swipe</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_settings">Settings</string>
    <string name="account_menu">Account</string>
    <string name="menu_notifications">Notifications</string>
    <string name="login">Login</string>
    <string name="hint_password">X-Auth-Token</string>
    <string name="get_token">How do I get a X-Auth-Token?</string>
    <string name="no_likes">You haven\'t received any likes yet</string>
    <string name="wiki_token">"https://rednit.stoplight.io/docs/tinder-api/ZG9jOjIyMTk3ODgx-authentication"</string>
    <string name="content_description">user image</string>
    <string name="match_title">It\'s a Match!</string>
    <string name="match_open_chat">Open Chat</string>
    <string name="match_delete">Delete Match</string>
    <string name="match_keep_swiping">Keep Swiping</string>
</resources>