<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/match_title"
        android:textSize="40sp"
        android:textStyle="bold" />

    <GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="wrap_content"
        android:layout_below="@+id/text_title"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/image_self"
            android:layout_width="84dp"
            android:layout_height="106dp" />

        <ImageView
            android:id="@+id/image_heart"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ic_swipe_right" />

        <ImageView
            android:id="@+id/image_matched"
            android:layout_width="84dp"
            android:layout_height="106dp" />
    </GridLayout>

    <Button
        android:id="@+id/button_keep_swiping"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@+id/grid_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/ic__arrow_back"
        android:text="@string/match_keep_swiping"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/button_open_chat"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@+id/button_keep_swiping"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/ic_chat_active"
        android:text="@string/match_open_chat"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/button_delete_match"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@+id/button_open_chat"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:drawableStart="@drawable/ic_delete"
        android:text="@string/match_delete"
        android:textAllCaps="false" />


</RelativeLayout>