<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/layoutLogin"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="60dp"
            android:hint="@string/hint_password"
            android:textColorHint="@color/text"
            app:endIconMode="password_toggle"
            app:passwordToggleEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textPassword"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="60dp"
            android:background="@color/primaryVariant"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/text"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textPassword"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textGetToken"
            android:layout_width="165dp"
            android:layout_height="16dp"
            android:layout_below="@+id/buttonLogin"
            android:layout_alignEnd="@+id/buttonLogin"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="0dp"
            android:text="@string/get_token"
            android:textAlignment="center"
            android:textColor="@color/secondary"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:visibility="invisible"
        android:indeterminateTint="@color/secondaryVariant" />

</RelativeLayout>